tests/NormalTests/paczka1/fuzzy1/94245311.err
Error in line 1: S330 S483 18,2
Error in line 19: Qh9I S275 86,7
Error in line 20: Qh9I S330 45,1
Error in line 28: K87w8i S330 18,3
Error in line 34: VZBlrZtjejV S483 6,3
